Compucom CCQA/src/objects/Fcst_Cost_Center__c.object
<CustomObject>
    <fields>
        <fullName>BSLA__c</fullName>
        <label>BSLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>203563</fullName>
                </value>
                <value>
                    <fullName>10C363</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU_Level1__c</fullName>
        <label>BU Level1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_Level_2__c</fullName>
        <label>BU Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Description__c</fullName>
        <label>Cost Center Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fcst Cost Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cost_Center_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cost Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fcst Cost Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>